--- a/style.css
+++ b/style.css
@@ -29,12 +29,17 @@ P {
     margin-left: auto;
     margin-right: auto;
 }
-/* #footer {
-    background-color: aqua;
-    border: 5px solid blue;
-} */
+
 form {
-    padding-left: 40%;
     border: 1px solid blanchedalmond;
     background-color: aquamarine;
+}
+#submit {
+    margin-left: auto;
+    margin-right: auto;
+}
+#container2 {
+        text-align: center;
+        border: 1px solid blueviolet;
+        background-color: aquamarine;
 }
